--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -487,6 +487,63 @@ year = {2010},
 author = {Santo Fortunato},
 }
 
+@article{Fowlkes,
+ ISSN = {01621459, 1537274X},
+ URL = {http://www.jstor.org/stable/2288117},
+ abstract = {This article concerns the derivation and use of a measure of similarity between two hierarchical clusterings. The measure, Bk, is derived from the matching matrix, [ mij], formed by cutting the two hierarchical trees and counting the number of matching entries in the k clusters in each tree. The mean and variance of Bk are determined under the assumption that the margins of [ mij] are fixed. Thus, Bk represents a collection of measures for k = 2,..., n - 1. (k, Bk) plots are found to be useful in portraying the similarity of two clusterings. Bk is compared to other measures of similarity proposed respectively by Baker (1974) and Rand (1971). The use of (k, Bk) plots for studying clustering methods is explored by a series of Monte Carlo sampling experiments. An example of the use of (k, Bk) on real data is given.},
+ author = {E. B. Fowlkes and C. L. Mallows},
+ journal = {Journal of the American Statistical Association},
+ number = {383},
+ pages = {553--569},
+ publisher = {[American Statistical Association, Taylor & Francis, Ltd.]},
+ title = {A Method for Comparing Two Hierarchical Clusterings},
+ urldate = {2024-12-05},
+ volume = {78},
+ year = {1983}
+}
+
+@article{Silhouettes,
+title = {Silhouettes: A graphical aid to the interpretation and validation of cluster analysis},
+journal = {Journal of Computational and Applied Mathematics},
+volume = {20},
+pages = {53-65},
+year = {1987},
+issn = {0377-0427},
+doi = {https://doi.org/10.1016/0377-0427(87)90125-7},
+url = {https://www.sciencedirect.com/science/article/pii/0377042787901257},
+author = {Peter J. Rousseeuw},
+keywords = {Graphical display, cluster analysis, clustering validity, classification},
+abstract = {A new graphical display is proposed for partitioning techniques. Each cluster is represented by a so-called silhouette, which is based on the comparison of its tightness and separation. This silhouette shows which objects lie well within their cluster, and which ones are merely somewhere in between clusters. The entire clustering is displayed by combining the silhouettes into a single plot, allowing an appreciation of the relative quality of the clusters and an overview of the data configuration. The average silhouette width provides an evaluation of clustering validity, and might be used to select an ‘appropriate’ number of clusters.}
+}
+
+@article{Caliński,
+author = {T. Caliński and J Harabasz},
+title = {A dendrite method for cluster analysis},
+journal = {Communications in Statistics},
+volume = {3},
+number = {1},
+pages = {1--27},
+year = {1974},
+publisher = {Taylor \& Francis},
+doi = {10.1080/03610927408827101},
+}
+
+@ARTICLE{Davies,
+  author={Davies, David L. and Bouldin, Donald W.},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence}, 
+  title={A Cluster Separation Measure}, 
+  year={1979},
+  volume={PAMI-1},
+  number={2},
+  pages={224-227},
+  keywords={Dispersion;Density measurement;Algorithm design and analysis;Clustering algorithms;Partitioning algorithms;Multidimensional systems;Data analysis;Performance analysis;Humans;Missiles;Cluster;data partitions;multidimensional data analysis;parametric clustering;partitions;similarity measure},
+  doi={10.1109/TPAMI.1979.4766909}
+}
+
+
+
+
+
 
 
 
