--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -516,7 +516,7 @@ keywords = {Graphical display, cluster analysis, clustering validity, classifica
 abstract = {A new graphical display is proposed for partitioning techniques. Each cluster is represented by a so-called silhouette, which is based on the comparison of its tightness and separation. This silhouette shows which objects lie well within their cluster, and which ones are merely somewhere in between clusters. The entire clustering is displayed by combining the silhouettes into a single plot, allowing an appreciation of the relative quality of the clusters and an overview of the data configuration. The average silhouette width provides an evaluation of clustering validity, and might be used to select an ‘appropriate’ number of clusters.}
 }
 
-@article{Caliński,
+@article{Calinski,
 author = {T. Caliński and J Harabasz},
 title = {A dendrite method for cluster analysis},
 journal = {Communications in Statistics},
@@ -562,3 +562,4 @@ doi = {10.1080/03610927408827101},
 
 %%  author		= "{Price, R. A. Jr} and {Curry, N. {III}} and McCann, K. E. and 
 %%					Fielding, J. L. and {Abercrombie, E. Jr}",
+
